first test of actual tool

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/Casimir-Kuzyk/prompt-tool#readme",
   "dependencies": {
-    "commander": "^10.0.0"
+    "commander": "^10.0.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
   }
 }
