--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gpt-prompt-tool",
   "version": "1.0.5",
   "description": "create a txt file with all of the code in a folder for prompting chatgpt",
-  "main": "index.js",
+  "main": "gpt-prompt-tool.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
