changed the package.json to include correct bin

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "combiner": "./gpt-prompt-tool.js"
+  },
   "keywords": [
     "chat",
     "gpt",
