--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "clipboardy": "^3.0.0",
     "commander": "^10.0.0",
+    "copy-paste": "^1.3.0",
     "fs": "^0.0.1-security",
     "path": "^0.12.7"
   }
